phl/css/style.css
/* ... */
#footer .logo {
  display: block;
  float: left;
  margin-right: 5px;
}
#footer .logo.ocha {
  padding: 2px 0;
}
#footer .logo.ocha img {
  height: 30px;
}
#footer .logo.reliefweb {
  padding: 9px 0;
}
#footer .logo.reliefweb img {
  height: 19px;
}
#footer div {
  padding-left: 185px;
}

#map {
  background: #e9eef9;
  position: absolute;
  top: 0;
  left: 400px;
  right: 0;
  bottom: 0;
  overflow: hidden;
}
.layer-map {
  position: relative;
  height: 100%;
  width: 100%;
}

#info {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 400px;
  background: white;
  border-right: 1px solid #aaa;
  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);
  z-index: 2;
  overflow-y: scroll;
}
#info .tabs,
#info .tabs li {
  margin: 0;
  padding: 0;
}
#info .tabs {
  margin-top: 20px;
  position: relative;
}
#info .tabs li {
  display: inline;
}
#info .tabs li > label {
  font-size: 14px;
  color: #666;
  font-weight: bold;
  padding: 5px;
  margin-left: 2px;
  border: 1px solid #999;
  background: #dadada;
  list-style: none;
  cursor: pointer;
  display: inline-block;
  position: relative;
  z-index: 2;
  -moz-box-sizing: border-box;
       box-sizing: border-box;
}
#info .tabs li:first-child > label {
  margin-left: 5px;
}
/*#info .tabs li > label:after {
  content: "▸";
  font-size: 20px;
  margin-top: -5px;
  margin-left: 5px;
  display: inline-block;
  line-height: 20px;
  vertical-align: middle;
  color: #666;
}
#info .tabs li:last-child > label:after {
  display: none;
}*/
#info .tabs li > label:hover {
  color: #333;
  background: #bababa;
}
#info .section {
  border-top: 1px solid #999;
  display: none;
  position: absolute;
  top: 24px;
  padding: 10px;
  margin-top: 4px;
  color: #000;
  -moz-box-sizing: border-box;
       box-sizing: border-box;
}
#info .section p {
  color: #666;
}
#info .tabs li > input[name=tabs] {
  display: none;
}
#info .tabs li > input[name=tabs]:checked ~ .section {
  display: block;
}
#info .tabs li > input[name=tabs]:checked + label,
#info .tabs li > input[name=tabs]:checked + label:after {
  background: #fff;
  color: #026CB6;
  border-bottom: 1px solid #fff;
}
#info #timeline {
  width: 100%;
  height: 700px;
}
#info .section .total {
  position: relative;
  border-top: 1px solid #026CB6;
  border-bottom: 1px solid #026CB6;
  padding: 5px;
  margin: 30px 0 10px;
  height: 40px;
}
#info .section .total > div {
  position: relative;
  display: inline-block;
  margin-right: 5px;
}
#info .section .total i {
  display: inline-block;
  font-size: 40px;
  margin-right: 5px;
  vertical-align: top
}
#info .section .total > div > div {
  display: inline-block;
  height: 40px;
  margin-right: 5px;
}
#info .section .total strong {
  float: left;
}
#info .section .total em {
  font-style: normal;
  float: left;
  clear: left;
}
#info .section .total strong {
  color: #026CB6;
  font-size: 20px;
}
#info .section .total em {
  color: #999;
  font-size: 13px;
}

#info .section .graph {
  position: relative;
}
#info .section .graph .title {
  color: rgb(244, 121, 50);
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-size: 12px;
  font-weight: bold;
  margin: 0;
  padding-top: 10px;
}
#info .section .graph .axis text {
  font: 10px sans-serif;
  fill: #999;
}
#info .section .graph .axis path,
#info .section .graph .axis line {
  fill: none;
  stroke: none;
  shape-rendering: crispEdges;
}
#info .section .graph .grid {
  stroke: #ccc;
}
#info .section .graph .bar rect {
  fill: #026CB6;
}
#info .section .graph .bar:hover rect {
  stroke: #aaa;
}
#info .section .graph .bar .category {
  text-anchor: end;
  fill: #026CB6;
}
#info .section .graph .bar .value {
  font-size: 10px;
}
#info .section .graph .bar .value.start {
  text-anchor: start;
  fill: #333;
}
#info .section .graph .bar .value.end {
  text-anchor: end;
  fill: #fff;
}
#info .section.funding .graph .bar .category {
  font-size: 10px;
}
#info .section.funding .graph .bar rect.funded {
  fill: #026CB6;
}
#info .section.funding .graph .bar rect.requested {
  fill: #ccc;
}
#info .section.funding .total {
  margin: 10px 0;
}
#info .section.funding h3 {
  color: #666;
}
.source a {
  color: #666;
}

/**
 * Control layer.
 */
.layer-control {
  font: 13px Arial, Helvetica, sans-serif;
}

.layer-control > div {
  position: absolute;
  z-index: 1000;
  /*pointer-events: none;*/
}

.layer-control > div.top {
  top: 10px;
}

.layer-control > div.left {
  left: 10px;
}

.layer-control > div.right {
  right: 10px;
}

.layer-control > div.bottom {
  bottom: 10px;
}

.layer-control > div.left .control {
  float: left;
}

.layer-control > div.right .control {
  float: right;
}

.layer-control > div.top .control {
  margin-bottom: 10px;
}

.layer-control > div.bottom .control {
  margin-top: 10px;
}

.control {
  position: relative;
  z-index: 7;
  /*background: rgba(255,255,255,0.8);
  box-shadow: 0 0 15px rgba(0,0,0,0.2);*/
  background: rgba(255, 255, 255, 0.8);
  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
  border-radius: 4px;
  border: 2px solid #aaa;
  font-family: Arial, Helvetica, sans-serif;
  color: #555;
  /*pointer-events: auto;*/
  /*cursor: auto;*/
  clear: both;
}

.control.zoom a {
  font: bold 18px 'Lucida Console', Monaco, monospace;
  text-indent: 1px;
  text-decoration: none;
  text-align: center;
  color: black;
  display: block;
  width: 26px;
  height: 26px;
  line-height: 26px;
  cursor: pointer;
}

.control.zoom a:hover {
  background: #ccc;
}

.control.zoom a.zoom-in {
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  border-bottom: 1px solid #ccc;
}

.control.zoom a.zoom-out {
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.control.selector {
  padding: 5px;
  text-transform: capitalize;
  width: 140px;
}

.control.selector i {
  font-size: 14px;
  margin-left: 3px;
  margin-right: 5px;
}

.control.selector input,
.control.selector label {
  cursor: pointer;
}

.control.selector input[type="radio"] {
  margin: 3px 1px;
}
/* ... */

